# Assignment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  processor.cpp  processor.h
app/src/main/java/com/example/edgedetection/: CameraPreview.kt  GLRenderer.kt  GLTextureView.kt  MainActivity.kt  ShaderProgram.kt
app/src/main/res/values/: strings.xml
app/web_viewer/: index.html  package-lock.json  package.json  tsconfig.json
app/web_viewer/src/: index.ts  ui.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
